<resources>
    <string name="app_name">TourReservation</string>
    <string name="tv_destination">目的地:</string>
    <string name="tv_start_date">可出發日期:</string>
    <string name="et_destination">請輸入目的地</string>
    <string name="et_from">最早出發日期</string>
    <string name="et_to">最晚出發日期</string>
    <string name="date_format">%1$d-%2$d-%3$d</string>
    <string name="btn_search">搜尋</string>

    <string name="signup_title">註冊</string>
    <string name="search_title">搜尋</string>
    <string name="reservation_title">預訂</string>
    <string name="modify_title">修改</string>
    <string name="check_title">確認</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="username_hint">帳號</string>
    <string name="password_hint">密碼</string>
    <string name="realname_hint">姓名</string>

    <string name="same_username">此帳號已註冊過，請更改</string>
    <string name="signup_success">註冊成功</string>
    <string name="no_tours">無開團資訊，請修改目的地或日期</string>

    <string name="no_username">無此使用者，請先註冊</string>

    <string name="not_enough">已超出可報名人數，請修改人數</string>
    <string name="zero_people">須至少一人以預訂</string>
    <string name="order_id">訂單編號</string>
    <string name="no_such_order">查無訂單，請重新輸入</string>
    <string name ="successful_order">成功預定</string>>

    <string name="adult">成人</string>
    <string name="child">孩童</string>
    <string name="baby">嬰兒</string>

    <string name = "successful_modify">修改成功</string>
    <string name = "fail_modify">修改失敗，超出成團時間</string>
    <string name="cancel_order">退訂</string>
    <string name="cancel_success">已成功取消訂單</string>
</resources>
